<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobApps-OSM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Switch Menue -->
	<string name="Menue_SwitchButton_Settings_Title">Einstellungen</string>
	<string name="Menue_SwitchButton_Map_Title">Karte</string>
	<string name="Menue_SwitchButton_Stats_Title">Auswertung</string>

	<!-- Fragment Stats -->
	<string name="fStats_Button_DeleteFile_Text">löschen</string>
	
	<!--  Fragment Settings --> 
  	<string name="fSettings_Button_DeleteFile_Text">löschen</string> 
  	<string name="fSettings_Toggle_GPS_Text_ON">GPS ON</string> 
  	<string name="fSettings_Toggle_INet_Text_ON">Internet On</string> 
  	<string name="fSettings_Toggle_Track_Text_ON">Track On</string> 
  	<string name="fSettings_Toggle_GPS_Text_OFF">GPS OFF</string> 
  	<string name="fSettings_Toggle_INet_Text_OFF">Internet OFF</string> 
  	<string name="fSettings_Toggle_Track_Text_OFF">Track OFF</string>

  	<!--  Fragment Map -->
  	<string name="fMap_Toggle_Center_Text_ON">Center</string>
  	<string name="fMap_Toggle_Center_Text_OFF">Center</string>


</resources>
