<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal"
    android:visibility="visible" >

    <Spinner
        android:id="@+id/fSettings_DropDown_Files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/fSettings_Button_DeleteFile" />

    <Button
        android:id="@+id/fSettings_Button_DeleteFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/fSettings_Button_DeleteFile_Text" />

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/fSettings_DropDown_Files"
        android:columnCount="2"
        android:orientation="horizontal" >

        <Space
            android:layout_column="1"
            android:layout_gravity="fill_vertical"
            android:layout_row="4" />

        <ToggleButton
            android:id="@+id/fSettings_Toggle_GPS"
            android:layout_width="300dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:layout_row="0"
            android:textOff="@string/fSettings_Toggle_GPS_Text_OFF"
            android:textOn="@string/fSettings_Toggle_GPS_Text_ON" />

        <ToggleButton
            android:id="@+id/fSettings_Toggle_Track"
            android:layout_width="300dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:layout_row="2"
            android:textOff="@string/fSettings_Toggle_Track_Text_OFF"
            android:textOn="@string/fSettings_Toggle_Track_Text_ON" />

        <ToggleButton
            android:id="@+id/fSettings_Toggle_INet"
            android:layout_width="300dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="16dp"
            android:layout_row="1"
            android:textOff="@string/fSettings_Toggle_INet_Text_OFF"
            android:textOn="@string/fSettings_Toggle_INet_Text_ON" />

    </GridLayout>

</RelativeLayout>